# incentive-engine

./: README.md  init_incentive_sdk.sh
incentive-engine-api/: .env.example  .gitignore  README.md  pyproject.toml
incentive-engine-api/api/: __init__.py  config.py  main.py
incentive-engine-api/api/db/: database.py  models.py
incentive-engine-api/api/models/: account.py  reward.py
incentive-engine-api/api/routes/: accounts.py  reward.py
incentive-engine-api/api/services/: account_service.py  reward_service.py
incentive-engine-api/api/utils/: auth.py
incentive-engine-api/tests/: test_account_route.py  test_reward_route.py
incentive-engine-sdk/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
incentive-engine-sdk/examples/: reward_user.py
incentive-engine-sdk/incentive/: __init__.py  client.py  config.py  exceptions.py  utils.py
incentive-engine-sdk/tests/: test_client.py
