# incentive-engine-api/pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incentive-engine-api"
version = "0.1.0"
description = "FastAPI backend service for the Incentive Engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.20.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.26.0",
  "pydantic>=1.10.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.20.0",
  "httpx>=0.24.0"
]

[tool.setuptools.packages.find]
where = ["api"]
include = ["api*"]
